--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -22,6 +22,7 @@
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.4",
     "file-loader": "^6.2.0",
+    "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
     "less": "^4.1.1",
     "less-loader": "^8.1.1",
@@ -33,5 +34,8 @@
     "webpack": "^5.36.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "vue-router": "^3.5.1"
   }
 }
